[package]
name = "dwav-token"
version = "1.0.0"
description = "DWAV Token - DarkWave Studios Utility Token on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dwav_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
